--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         .youtube-btn {
             display: inline-block;
             margin-top: 10px;
-            padding: 14px;
+            padding: 10px;
             background: #f3030f;
             color: white;
             text-decoration: none;
@@ -94,6 +94,24 @@
             background: #bd1624;
         }
         .youtube-icon {
+        width: 10px;
+        height: 14px;
+        }
+        .facebook-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 14px;
+            background: #f3030f;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: bold;
+        }
+
+        .facebook-btn:hover {
+            background: #bd1624;
+        }
+        .facebook-icon {
         width: 14px;
         height: 14px;
         }
@@ -152,6 +170,13 @@
        target="_blank">
         <img src="images/youtube.png" alt="YouTube" class="youtube-icon">
         Youtube
+    </a>
+    <!-- Link facebook -->
+        <a class="contact-btn facebook-btn"
+       href="https://www.facebook.com/profile.php?id=61585473977190"
+       target="_blank">
+        <img src="images/facebook.png" alt="YouTube" class="facebook-icon">
+        Facebook
     </a>
 
     </section>
