--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         .youtube-btn {
             display: inline-block;
             margin-top: 10px;
-            padding: 10px;
-            background: #f3030f;
+            padding: 14px;
+            background: #FF0000;
             color: white;
             text-decoration: none;
             border-radius: 6px;
@@ -91,17 +91,17 @@
         }
 
         .youtube-btn:hover {
-            background: #bd1624;
+            background: #b63030;
         }
         .youtube-icon {
-        width: 10px;
-        height: 14px;
+        width: 40px;
+        height: 40px;
         }
         .facebook-btn {
             display: inline-block;
             margin-top: 10px;
             padding: 14px;
-            background: #f3030f;
+            background: #3B5998;
             color: white;
             text-decoration: none;
             border-radius: 6px;
@@ -109,11 +109,11 @@
         }
 
         .facebook-btn:hover {
-            background: #bd1624;
+            background: #425275;
         }
         .facebook-icon {
-        width: 14px;
-        height: 14px;
+        width: 22px;
+        height: 22px;
         }
 
         footer {
